icon button svg alignment fixed

--- a/src/Landing/landing.css
+++ b/src/Landing/landing.css
@@ -24,6 +24,10 @@
   border-radius: 2px;
   margin: 1rem 1rem 1rem 0;
 }
+.contact-bar {
+  display: flex;
+  justify-content: center;
+}
 .icon {
   padding: 0;
   transform: translateY(0.3rem) translateX(0.034rem);
